samples/_failures_safe/1761217269_bd9780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_968a2982.c: In function ‘main’:
./samples/SAFE/__tmp_968a2982.c:159:12: error: missing terminating " character
  159 |     printf("\nMatrix A (%dx%d):
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_968a2982.c:159:5: error: expected expression at end of input
  159 |     printf("\nMatrix A (%dx%d):
      |     ^~~~~~
./samples/SAFE/__tmp_968a2982.c:159:5: error: expected declaration or statement at end of input
